--- a/ProductService Page.html
+++ b/ProductService Page.html
@@ -250,12 +250,18 @@
     }
   </style>
   <script>
-    function addToCart(id, name, price) {
-      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  function addToCart(id, name, price) {
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const index = cart.findIndex(item => item.id === id);
+    if (index > -1) {
+      cart[index].quantity += 1;
+    } else {
       cart.push({ id, name, price, quantity: 1 });
-      localStorage.setItem("cart", JSON.stringify(cart));
-      alert(${name} has been added to your cart.);
     }
+    localStorage.setItem("cart", JSON.stringify(cart));
+    alert(name + " has been added to your cart.");
+    window.location.href = "cart.html";
+  }
   </script>
 </head>
 <body>
