--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <a href="index.html">Sun</a>
       <a href="index.html">Optical</a>
       <a href="index.html">Anti-Rad</a>
-      <a href="index.html">Flasks</a>
+      <a href="index.html">Readers</a>
     </div>
     <div class="center-logo">
       <a href="index.html">
